tests/errors/semantic_52/s4.src
.IPPcode21

CREATEFRAME
DEFVAR TF@abcdef
PUSHFRAME
DEFVAR LF@abcdef
